NAS-2380 Converted the last jdklogger(in webinterface packages) and commons-logging to SLF4J